test/success/power.dsk

let power: fn = (base: int, exp: int) -> int
    if exp == 0
        return 1

    let x: int = exp % 2
    if x == 0
        let half: int = power(base, exp // 2)
        return half * half

    return base * power(base, exp - 1)

assert(power(base=2, exp=0) == 1)
assert(power(2, 3) == 8)
assert(power(5, 2) == 25)
assert(power(3, 4) == 81)
