test/error/primitive-params-cant-be-mutable.dsk
let f = (mut x: int) -> void
    return
